@@ -1,4 +1,5 @@
 Changes since 2010-12-01
 
 * New bindings landed. Change webdriver namespace to "selenium.webdriver"
-
+* Ability to move to default content
+* Implicit Waits
